b 2.7 (small title spacing fixes)

--- a/commissions/css/style.css
+++ b/commissions/css/style.css
@@ -146,7 +146,7 @@ div#fh5co-projects-feed {
   margin: 0 auto;
   max-width: 700px;
   width: 95%;
-  padding-top: 70px;
+  padding-top: 45px;
   padding-bottom: 70px;
 }
 .page-content img {
