--- a/portfolio/css/style.css
+++ b/portfolio/css/style.css
@@ -49,7 +49,7 @@ h6 {
   color: #212121;
   font-family: "Libre Baskerville", Arial, serif;
   font-weight: 400;
-  margin: 0 0 20px 0;
+  margin: 60px 0 0 0;
 }
 
 figure {
